# STIG

./: .compilerc  .eslintignore  .eslintrc.js  .gitignore  .readthedocs.yaml  COPYRIGHT.txt  Dockerfile  Dockerfile_insecure  Dockerfile_secure  LICENSE.txt  NOTICE.txt  README copy.md  README.md  db.ts  docker-compose.yaml  index.html  index.ts  package-lock.json  package.json  perms.txt  taxii-client.py  test_bundle.json  tsconfig.json  tslint.json  webpack.config.js
db_setup/: README.md  STIG_QUERY_CHEATSHEET.md  build_db.py  import_db.txt  pyproject.toml  setup.py  setup.sh
db_setup/manual_import/: empty_build_db.txt  empty_stig_schema.json
db_setup/stix_loader/: odbbuilder.py
db_setup/stix_loader/models/v20/: stixmodels.py
db_setup/stix_loader/models/v21/: convert.py  stixmodels.py
docs/source/: building-from-source.rst  conf.py  connecting-to-the-database.rst  contributing.rst  copyright.rst  disclaimer.rst  index.rst  installation.rst  known-issues.rst  license.rst  linux-debian.rst  linux-rpm.rst  macos.rst  menu.rst  notice.rst  other-software.rst  searching-stig.rst  sponsors.rst  using-stig.rst  windows.rst
src/: index.html  index.ts  main.ts
src/contextLayouts/: contextLayouts.ts  defenseInDepthExtension.json  defenseInDepthSchema.json  graphLayoutFunctions.ts  killChainSchema.json
src/db/: create-db.ts  db-classes.ts  db.ts  dbFunctions.ts  db_types.ts  dbi.ts  index.ts  schema.ts
src/graph/: colaLayoutOptions.ts  context-menu.ts  edge-handles.ts  graphFunctions.ts  graphOptions.ts
src/static/: index.css
src/stix/: index.ts  stix2.ts  (+2 more)
(+114 files in other folders)
