[tool]
[tool.poetry]
name = "stix_loader"
version = "0.0.0"
description = ""
authors = ["Jed Haile"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "*"
dateparser = "*"
decorator = "*"
ipython = "*"
ipython-genutils = "*"
jedi = "*"
pexpect = "*"
pickleshare = "*"
prompt-toolkit = "*"
ptyprocess = "*"
pygments = "*"
pyorient = { git = "https://github.com/orientechnologies/pyorient" }
pyparsing = "*"
python-dateutil = "*"
pytz = "*"
regex = "*"
simplegeneric = "*"
six = "*"
stix2 = "*"
taxii2-client = "*"
tqdm = "*"
traitlets = "*"
tzlocal = "*"
wcwidth = "*"

[tool.poetry.dev-dependencies]
ipykernel = "*"
pipdeptree = "*"
pipgrip = "*"
pylint = "*"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
